objects/BizBox_Sales__c.object
<CustomObject>
    <description>Object to hold roll-up of sales by email for BizBox customers.</description>
    <fields>
        <fullName>AOPS_ID__c</fullName>
        <externalId>true</externalId>
        <label>AOPS_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>GrandParent, System, Customer (Business Pro), Account Setup Requested, Customer, Prospect, Site, Customer (OfficeMax), Prospect (OfficeMax), Site (OfficeMax), Account Setup Requested GT, Customer (GT), Prospect (GT), Site (GT)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BizBox Sales</relationshipLabel>
        <relationshipName>BizBox_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Management_Sales__c</fullName>
        <label>Asset Management Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BizBox_ID__c</fullName>
        <label>BizBox ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookkeeping_Services_Sales__c</fullName>
        <label>Bookkeeping Services Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Marketing_Sales__c</fullName>
        <label>Email Marketing Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGM__c</fullName>
        <label>IGM</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Services_Sales__c</fullName>
        <label>Legal Services Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logo_Design_Sales__c</fullName>
        <label>Logo Design Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payroll_HR_Services_Sales__c</fullName>
        <label>Payroll &amp; HR Services Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Potential Lead Match</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>BizBox Sales</relationshipLabel>
        <relationshipName>BizBox_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QTY__c</fullName>
        <label>QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Order_Date__c</fullName>
        <label>Recent Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Search_Marketing_Sales__c</fullName>
        <label>Search Marketing Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Social_Media_Marketing_Sales__c</fullName>
        <label>Social Media Marketing Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_ID_Incorporation_Sales__c</fullName>
        <label>Tax ID Incorporation Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_Design_Hosting_Sales__c</fullName>
        <label>Web Design &amp; Hosting Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>BizBox Sales</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BizBox Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BizBox Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>